--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -22,7 +22,7 @@ Validators are a new entity on the Helium Blockchain that will perform the work 
 
 Before you start, there are a few items to review...
 
-### Expectations for Running a Validator on Testnet
+## Expectations for Running a Validator on Testnet
 
 As Validators will play an important role in the expansion, stability and success of the Helium network moving forward, it's important to set expectations for running a Validator, especially during the Testnet process.
 
@@ -40,49 +40,6 @@ We understand that not everyone will be able to meet these expectations. It may 
 
 :::
 
-## Deploy a Validator
-
-Ready to deploy a Validator to the Testnet? The [complete Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) will walk you through the entire process.
-
-## Validator Explorer
-
-There is [a new Explorer for Validators](https://explorer.helium.wtf/validators) being developed by Helium and the Community.
-
-## Validator Resources
-
-To run a Testnet Validator node refer to the following:
-
-<div>
-  <a className="block" href="/mine-hnt/validators/requirements">
-    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
-    Technical Requirements
-  </a>
-  <a className="block" href="/mine-hnt/validators/validator-wallet">
-    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
-    Configure Wallet
-  </a>
-  <a className="block" href="/mine-hnt/validators/validator-tnt">
-    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Obtain
-    Testnet Network Tokens (TNT)
-  </a>
-  <a className="block" href="/mine-hnt/validators/validator-run">
-    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Run a
-    Validator
-  </a>
-  <a className="block" href="/mine-hnt/validators/validator-monitor">
-    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
-    Monitor a Validator
-  </a>
-  <a className="block" href="/mine-hnt/validators/validator-troubleshooting">
-    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
-    Troubleshooting
-  </a>
-  <a className="block" href="/mine-hnt/validators/validator-testcases">
-    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Test
-    Cases
-  </a>
-</div>
-
 ## Testnet Overview and Design
 
 As stated above, we are currently running the Testnet. As such, a few things are slightly modified from what will eventually be Mainnet. Specifically:
@@ -92,3 +49,13 @@ As stated above, we are currently running the Testnet. As such, a few things are
 * Testnet block production and epochs are accelerated. They are 10 second blocks and 10 minute epochs (mainnet targets 60 second blocks and 30 minute epochs).
 * The cooldown period - defined as the number of blocks after unstaking when the validator node doesn't earn rewards, and the stake is returned to the owner's wallet - is shortened to 360 blocks (or approximately 60 minutes). On mainnet this period will be closer to 200,000 blocks (or approximately 5 months).
 
+## Resources for Deploy and Managing a Validator
+
+* [Technical Requirements](/mine-hnt/validators/requirements) - Information on the hardware, software, and network recommendations on hosting a validator.
+* [Complete Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) - How to get up and running with your Testnet validator.  Including staking, running, updating, and monitoring.
+* [Troubleshooting](/mine-hnt/validators/validator-troubleshooting) - Troubleshooting help and additional resources.
+* [Test Cases](/mine-hnt/validators/validator-testcases) - Test cases and areas of focus for the Testnet.
+* [Validator Explorer](https://explorer.helium.wtf/validators) - There is a new Explorer being developed by Helium and the community.
+
+
+Ready to deploy a Validator to the Testnet? Get started with the [Complete Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) will walk you through the entire process.
