initial content for FAQs

--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -56,6 +56,7 @@ As stated above, we are currently running the Testnet. As such, a few things are
 * [Troubleshooting](/mine-hnt/validators/validator-troubleshooting) - Troubleshooting help and additional resources.
 * [Test Cases](/mine-hnt/validators/validator-testcases) - Test cases and areas of focus for the Testnet.
 * [Validator Explorer](https://explorer.helium.wtf/validators) - There is a new Explorer being developed by Helium and the community.
+* [Resources and FAQs](/mine-hnt/validators/validator-faqs-resources) - Videos, FAQS, and details on commercial staking providers active in the community. 
 
 
 Ready to deploy a Validator to the Testnet? Get started with the [Complete Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) will walk you through the entire process.
