--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -48,7 +48,7 @@ This image shows the progression to Light Hotspots, with the role of Miner being
 
 ## Code and Development 
 
-The bulk of the code that enables Light Hotspots on actual LoRaWAN gateways is called [gateway-rs](https://github.com/helium/gateway-rs). It's easiest to this of this as Helium's next-generation packet forwarder.
+The bulk of the code that enables Light Hotspots on actual LoRaWAN gateways is called [gateway-rs](https://github.com/helium/gateway-rs). It's easiest to think of this as Helium's next-generation packet forwarder.
 
 Development of this code takes place in the above GitHub repo, as well at the `#gateway` channel on the [Helium Discord Server](https://discord.gg/helium).
 
