--- a/docs/use-the-network/console/integrations/mqtt.mdx
+++ b/docs/use-the-network/console/integrations/mqtt.mdx
@@ -28,7 +28,7 @@ Devices are connected to integrations through the use of Labels. Labels are
 named identifiers, that can be used to associate an integration with a device.
 To connect one or more devices to one or more integrations, simply attach the
 same label to both the device and integration. Labels need to be created before
-attaching them to devices and integrations. Read more on this [here](../labels).
+attaching them to devices and integrations. Read more on this [here](/use-the-network/console/labels).
 
 ## MQTT Topic composition:
 
