Fix Links in MQTT Doc (#254)
* change link to full path

* fix labels link

--- a/docs/use-the-network/console/integrations/mqtt.mdx
+++ b/docs/use-the-network/console/integrations/mqtt.mdx
@@ -28,7 +28,7 @@ Devices are connected to integrations through the use of Labels. Labels are
 named identifiers, that can be used to associate an integration with a device.
 To connect one or more devices to one or more integrations, simply attach the
 same label to both the device and integration. Labels need to be created before
-attaching them to devices and integrations. Read more on this [here](../labels).
+attaching them to devices and integrations. Read more on this [here](/use-the-network/console/labels).
 
 ## MQTT Topic composition:
 
@@ -49,7 +49,7 @@ Example without prefix: `helium/3c822699-37fd-4df6-a84d-93037a450843/tx`
 ## MQTT Messages
 
 The MQTT for downlink and uplink follow the
-[JSON schema documented here.](./json-schema)
+[JSON schema documented here.](/use-the-network/console/integrations/json-schema)
 
 ## Send and Receive Device Data
 
