--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -366,8 +366,7 @@ GET https://api.helium.io/v1/accounts/:address/activity
 ```
 
 Fetches transactions that indicate activity for an account. This includes any
-transaction that involves the account, usually as a payer, payee or a hotspot
-owner.
+transaction that involves the account, usually as a payer, payee or owner.
 
 The results are paged. If a `cursor` field is present in the response, more
 results are available.
@@ -500,6 +499,60 @@ _Path Parameters_
 
 </TabItem>
 </Tabs>
+
+---
+
+## Activity Counts for Account
+
+```
+GET https://api.helium.io/v1/accounts/:address/activity/count
+```
+
+Count transactions that indicate activity for an account. This includes any
+transaction that involves the account, usually as a payer, payee or
+owner.
+
+The results are a map keyed by the given `filter_types` and the count of
+transaction of that type.
+
+<Tabs
+  block={true}
+  defaultValue="request"
+  values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
+<TabItem value="request">
+
+_Path Parameters_
+
+| param              | Type     | Note                                      |
+| ------------------ | -------- | ----------------------------------------- |
+| address (required) | _string_ | Account B58 address to fetch counts for   |
+
+_Query Parameters_
+
+| param             | Type     | Note                                          |
+| ----------------- | -------- | --------------------------------------------- |
+| filter_types      | _string_ | Comma separated list of transasction types    |
+
+</TabItem>
+<TabItem value="response">
+
+200: OK
+
+Fetch counts with `filter_types=add_gateaway_v1,assert_location_v1` for account
+`13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDird`
+
+```json
+{
+    "data": {
+        "add_gateway_v1": 5777,
+        "assert_location_v1": 5878
+    }
+}
+```
+
+</TabItem>
+</Tabs>
+
 
 ---
 
@@ -1002,7 +1055,7 @@ _Path Parameters_
 
 | param              | Type     | Note                                      |
 | ------------------ | -------- | ----------------------------------------- |
-| address (required) | _string_ | Account B58 address to fetch activity for |
+| address (required) | _string_ | Account B58 address to fetch stats for    |
 
 </TabItem>
 <TabItem value="response">
