--- a/docs/mine-hnt/validators/validator-faqs-resources.mdx
+++ b/docs/mine-hnt/validators/validator-faqs-resources.mdx
@@ -97,6 +97,6 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 
 * [Helium Rising](https://www.heliumrising.com)
 * [Argon.build](https://www.argon.build)
-* [hntvalidators.com](https://www.hntvalidators.com)
+* [HNT Validators](https://www.hntvalidators.com)
 * [Managed Helium Validator Service](https://heliumvalidators.com)
 * [StakeMyHNT](https://www.stakemyhnt.com)
