Modifications to reset from source section

--- a/docs/mine-hnt/validators/validator-deployment-guide.mdx
+++ b/docs/mine-hnt/validators/validator-deployment-guide.mdx
@@ -549,7 +549,7 @@ Getting back on chain is easy now that you've got everything installed:
 
 #### Reset the Validator - From Source
 
-- Stop the validator, delete the same folders above that are located in `/miner/_build/validator/rel/miner/data`, pull from source, start the validator.
+- Stop the validator, delete the entire `miner` folder - saving the `swarm_key` file in `/miner/_build/validator/rel/miner/data/miner` if you like.  Pull from source with the updated version tag, start the validator.
 - Load the new genesis block `wget https://snapshots.helium.wtf/genesis.testnet` `miner genesis load </absolute/path/to/genesis/block>`. 
 
 #### Restake 
