Update p2p seeds - Fix wallet command
- companion https://github.com/helium/router/pull/252
- companion https://github.com/helium/console/pull/466
- Update helium-wallet command

--- a/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
@@ -106,7 +106,7 @@ Then edit `.env-router`. Here's an example of what it should look like:
 
 ```
 # Default Helium's seed nodes
-ROUTER_SEED_NODES=/ip4/34.222.64.221/tcp/2154,/ip4/34.208.255.251/tcp/2154
+ROUTER_SEED_NODES=/ip4/35.166.211.46/tcp/2154,/ip4/44.236.95.167/tcp/2154
 
 # OUI used by router (https://docs.helium.com/blockchain/packet-purchasing)
 ROUTER_OUI=4
@@ -188,7 +188,7 @@ this is what you need to update your OUI with, using the wallet you bought the
 OUI with.
 
 ```
-$ helium-wallet oui update --oui 4 --nonce 1 --address 11xHXS5AgLyjYRCJ4ctcWcsMRULS8jro9Pb1GPaTG1neGk1dNcf --commit
+$ helium-wallet oui update routers --oui 4 --nonce 1 --address 11xHXS5AgLyjYRCJ4ctcWcsMRULS8jro9Pb1GPaTG1neGk1dNcf --commit
 ```
 
 Once this transaction clears, the network will know about the association. It
