Validator Navigation hotfix

--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -53,6 +53,7 @@ As stated above, we are currently running the Testnet. As such, a few things are
 
 * [Technical Requirements](/mine-hnt/validators/requirements) - Information on the hardware, software, and network recommendations on hosting a validator.
 * [Complete Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) - How to get up and running with your Testnet validator.  Including staking, running, updating, and monitoring.
+* [Configuring Helium Wallets for Validators](/mine-hnt/validators/validator-wallet) - Additional wallet commands for use with validators.
 * [Troubleshooting](/mine-hnt/validators/validator-troubleshooting) - Troubleshooting help and additional resources.
 * [Test Cases](/mine-hnt/validators/validator-testcases) - Test cases and areas of focus for the Testnet.
 * [Validator Explorer](https://explorer.helium.wtf/validators) - There is a new Explorer being developed by Helium and the community.
