--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -444,7 +444,7 @@ Search results for `search=clever-gray`
 GET https://api.helium.io/v1/hotspots/location/distance
 ```
 
-Fetch the hotspots which are within a given number of meters from the given lat/lon co-ordinates. This
+Fetch the hotspots which are within a given number of meters from the given `lat` and `lon` coordinates. This
 route is paged using a `cursor`.
 
 
