--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -172,7 +172,7 @@ question:
 > If HNT supply is capped at 223,000,000 AND the Network is constantly burning
 > HNT to mint Data Credits to enable transactions, won't we run out of HNT?
 
-**Yes.** This is where the idea of Net Emissions comes in. Along with with Max
+**Yes.** This is where the idea of Net Emissions comes in. Along with Max
 Supply, [HIP 20](https://github.com/helium/HIP/issues/73) also introduced the
 idea of Net Emissions. Net Emissions give the protocol enough HNT to reward consensus 
 group members and Hotspots in perpetuity. 
