--- a/docs/blockchain/oracles/oracles.mdx
+++ b/docs/blockchain/oracles/oracles.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # HNT Price Oracles
 
-HNT coverts to Data Credits at a rate pegged to `$.00001` , and so the
+HNT converts to Data Credits at a rate pegged to `$.00001` , and so the
 blockchain requires a canonical HNT/$USD price for this conversion. Beginning in
 June 2020, the Helium blockchain
 [started using a system](https://engineering.helium.com/2020/05/29/HNT-Price-Oracles.html)
