--- a/docs/blockchain/packet-purchasing/packet-purchasing.mdx
+++ b/docs/blockchain/packet-purchasing/packet-purchasing.mdx
@@ -71,7 +71,7 @@ own transactions added to the same banner.
 
 Sometime before the expiration block, the OUI operator will submit a
 [`state_channel_close`](https://github.com/helium/proto/blob/master/src/blockchain_txn_state_channel_close_v1.proto)
-transaction channel, a transaction which also explicits how many data credits
+transaction channel, a transaction which also shows how many data credits
 are being burned in the name of which hotspots. Should a hotspot not be credited
 the appropriate amount, it has recourse during a "grace period" the ten blocks
 after the closure to file a dispute, using the signed offers as evidence. This
