--- a/docs/use-the-network/devices/ready-to-use/seeed-sensecap.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-sensecap.mdx
@@ -19,7 +19,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ### Introduction
 
-The SEEED SenseCAPs are are a series of industrial IoT products primarity
+The SEEED SenseCAPs are are a series of industrial IoT products primarily
 centered around Smart Agriculture. They are based on the LoRaWAN protocol and
 deployable worldwide with multiple ISM bands. SenseCAPs are encapsulated in IP66
 enclosures, making them applicable in outdoor remote sensing scenarios such as
