--- a/docs/mine-hnt/light-hotspots/guides/dragino.mdx
+++ b/docs/mine-hnt/light-hotspots/guides/dragino.mdx
@@ -34,8 +34,11 @@ To be able to send and receive LoRa data, your gateway must be configured to the
 2. Navigate to Lora > Lora from the Menu.
 3. Under Radio Settings, select `Customized Bands`. 
 4. Populate the Customized Channel Settings based on the Helium frequencies for your region. Refer to the [Helium sample LoRa packet forwarder global.conf files](https://github.com/helium/sx1302_hal/tree/helium/hotspot/packet_forwarder) for your region as a guide to the values to use.
-5. If desired, set Static GPS coordinates.
-6. Click Save & Apply.
+
+<img className="docsheader" src={useBaseUrl("img/mine-hnt/guides/dragino-guide-lora-config-US915.png")} />
+
+6. If desired, set Static GPS coordinates.
+7. Click Save & Apply.
 
 ## Configure LoRaWAN Settings
 
@@ -43,7 +46,10 @@ Next, you will configure the LoRa packet forwarder on the Dragino to forward pac
 1. From the Dragino web interface, navigate to LoRaWAN > LoRaWAN from the menu.
 2. Select `Custom / Private LoRaWAN` from the Service Provider.
 3. Set the Server Address to `127.0.0.1` and both Uplink and Downlink ports to `1680`. This will configure the forwarder to use the default port used by Helium Gateway.
-4. Click Save & Apply.
+
+<img className="docsheader" src={useBaseUrl("img/mine-hnt/guides/dragino-guide-lorawan-server-settings.png")} />
+
+5. Click Save & Apply.
 
 ## Install Helium Gateway (gateway-rs) on the Dragino
 
