--- a/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
@@ -140,7 +140,7 @@ can revisit them later.
 
 ### Run it!
 
-Copy the docker-compose file
+Copy the local docker-compose file
 ```
 cp templates/docker-compose-local.yaml docker-compose.yaml
 ```
