--- a/docs/mine-hnt/light-hotspots/guides/dragino.mdx
+++ b/docs/mine-hnt/light-hotspots/guides/dragino.mdx
@@ -30,7 +30,7 @@ Prior to configuring your Dragino to work with the Helium network, please confir
 
 To be able to send and receive LoRa data, your gateway must be configured to the frequencies specified for your region. While the Helium network follows common frequency plans for LoRa network, the pre-defined frequency bands in the Dragino are not compatible with the Helium network due to difference in transmit frequencies required for PoC.
 
-1. Log into the Dragino gateway web interface. In the standard Dragino firmware connect via your browser at http://<ip address>:8000 once the Dragino is connected to your network.
+1. Log into the Dragino gateway web interface. In the standard Dragino firmware connect via your browser at `http://<ip_address>:8000` once the Dragino is connected to your network.
 2. Navigate to Lora > Lora from the Menu.
 3. Under Radio Settings, select `Customized Bands`. 
 4. Populate the Customized Channel Settings based on the Helium frequencies for your region. Refer to the [Helium sample LoRa packet forwarder global.conf files](https://github.com/helium/sx1302_hal/tree/helium/hotspot/packet_forwarder) for your region as a guide to the values to use.
@@ -56,31 +56,36 @@ Next, you will configure the LoRa packet forwarder on the Dragino to forward pac
 Finally, you will install the Helium Gateway service. This requires SSH access to the Dragino.
 
 1. Connect to the Dragino over SSH. By default, the standard Dragino firmware uses port 2222 for SSH (the OpenVPN firmware uses port 22) and the root user has access. 
-`ssh root@<ip> -p 2222`
+`ssh root@<ip address> -p 2222`
 2. Copy the Helium Gateway package to the Dragino. The latest [source code](https://github.com/helium/gateway-rs) and pre-built [releases](https://github.com/helium/gateway-rs/releases) are available on GitHub.
     1. Option 1 Download from GitHub: 
 On the Dragino run `cd /tmp` and `wget -O helium-gateway-<version>-dragino.ipk https://github.com/helium/gateway-rs/releases/download/<version>/helium-gateway-<version>-dragino.ipk`.
     2. Option 2 Copy from another computer: 
 Run this command from on the computer within the directory containing the package `scp helium-gateway-<version>-dragino.ipk <dragino ip>:/tmp/`.
-3. Install the Helium Gateway package `opkg install /tmp/helium-gateway-<version>-dragino.ipk`.
+3. Update the package list on the Dragino so that the necessary dependencies are found `opkg update`.
+4. Install the Helium Gateway package `opkg install /tmp/helium-gateway-<version>-dragino.ipk`.
+5. Backup your key file `/etc/helium_gateway/keypair.bin` and keep in a safe place. This will be needed to recover this gateway especially if it is onboarded to the blockchain.
 
-_Note, as of version 1.0.0-alpha.4, the opkg install will output the message `Command failed: Not found` during the install, even if successful. Assuming there are no other errors, you can ignore this meesage._
+Helium Gateway is now installed and should be running. Use the command `helium_gateway key info` to view the public key address and animal name of your gateway.
 
 
 ## Verify 
 Your Dragino gateway should now be setup and forwarding LoRaWAN data traffic to the Helium Network. 
 
 ### Through Helium Console
-If you have a LoRaWAN device configured through the Helium Console, you should now see it uplinking traffic through the Dragino. You can verify this by turning on your device within range of the Dragino and looking for traffic in Console associated to the Dragino's hotspot name (note, currently you will have to assume the hotspot animal name based on it being different than other known gateways / hotspots in the area - eventually, you will be able to determine the gateway's name via the command line). 
+If you have a LoRaWAN device configured through the Helium Console, you should now see it uplinking traffic through the Dragino gateway. You can verify this by turning on your device within range of the Dragino and looking for traffic in Console associated to the Dragino gateway's animal name. 
 
-### Through the Dragino Logs
-Using the Dragino system log found in the web interface, search for the following messages to confirm that the Helium Gateway is running. If you do not see these, try restarting the Dragino as they may have aged out of the log. These messages indicate that the Helium Gateway service has started up on the Dragino.
+### Through the System Logs
+Use the Dragino system log to verify that Helium Gateway has started. You can view the log in the web interface or by using logread on the commandline interface (e.g, `logread | grep helium_gateway`). In the logs, you should see messages indicating helium_gateway is starting. If you do not see these, try restarting the service (`/etc/init.d/helium_gateway restart`) or reboot the Dragino as the messages may have rotated out of the log. 
 
-`Thu Mar 25 19:43:06 2021 daemon.err helium_gateway[2031]: Mar 25 19:43:06.184 INFO starting server, key: <public key>, version: 1.0.0-alpha.4
+_Example logs showing the Helium Gateway service starting_
+```
+Thu Mar 25 19:43:06 2021 daemon.err helium_gateway[2031]: Mar 25 19:43:06.184 INFO starting server, key: <public key>, version: 1.0.0-alpha.4
 Thu Mar 25 19:43:06 2021 daemon.err helium_gateway[2031]: Mar 25 19:43:06.289 INFO starting, module: gateway
-Thu Mar 25 19:43:06 2021 daemon.err helium_gateway[2031]: Mar 25 19:43:06.306 INFO starting, module: router`
+Thu Mar 25 19:43:06 2021 daemon.err helium_gateway[2031]: Mar 25 19:43:06.306 INFO starting, module: router
+```
 
-Additionally, the LoRa Packet Forwarder log can provide some clues as to whether the LoRaWAN server configuration is correct. Search the system log for PULL_DATA messages and confirm that they are acknowledged such as `REPORT~ # PULL_DATA sent: 1 (100.00% acknowledged)`. This indicates that the packet forwarder is communicate with the Helium Gateway service running on the Dragino and is getting replies from the service as expected. Note, this is not a foolproof way to confirm it is configured correctly. By default, the LoRaWAN Server settings are configured for the TTN EU server which will also provide acknowledgement. However, the absence of acknowledgement could indicate the the LoRaWAN settings are not correct per the above.
+Additionally, the LoRa Packet Forwarder log can provide some clues as to whether the LoRaWAN server configuration is correct. Search the system log for PULL_DATA messages and confirm that they are acknowledged such as `REPORT~ # PULL_DATA sent: 1 (100.00% acknowledged)`. This indicates that the packet forwarder is communicating with the Helium Gateway service running on the Dragino and is getting replies from the service as expected. Note, this is not a foolproof way to confirm it is configured correctly. By default, the LoRaWAN Server settings are configured for the TTN EU server which will also provide acknowledgement. However, the absence of acknowledgement could indicate the the LoRaWAN settings are not correct per the above.
 
 
 ## COMING SOON: Onboard Gateway
