Add unit in HS distance search field

--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -456,11 +456,11 @@ route is paged using a `cursor`.
 
 _Query Parameters_
 
-| param             | Type      | Note                                          |
-| ----------------- | --------- | --------------------------------------------- |
-| lat               | _float_   | Latitude of the location to search around     |
-| lon               | _float_   | Longitude of the location to search around    |
-| distance          | _integer_ | Distance from location to search within       |
+| param             | Type      | Note                                                |
+| ----------------- | --------- | --------------------------------------------------- |
+| lat               | _float_   | Latitude of the location to search around           |
+| lon               | _float_   | Longitude of the location to search around          |
+| distance          | _integer_ | Distance (in meters) from location to search within |
 
 </TabItem>
 <TabItem value="response">
