--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -72,9 +72,9 @@ At the completion of Milestone 1, any LoRaWAN gateways running [gateway-rs](http
 * **Status: IN DEVELOPMENT**
 
 
-When  Milestone 1.5 is done, Light Hotspots can be formally added to blockchain and be seen on the [Helium Coverage Map](https://explorer.helium.com/hotspots). Light Hotspots will be required to pay $20 transaction fee to join the blockchain, and $10 assert location fee. (Full Hotspots pay $40 and $10 for add assert, respectively.)
+When  Milestone 1.5 is done, Light Hotspots that will not participate in Proof of Coverage can be formally added to blockchain by anyone and be seen on the [Helium Coverage Map](https://explorer.helium.com/hotspots). These Light Hotspots will be required to pay $20 transaction fee to join the blockchain, and $10 assert location fee. (Full Hotspots pay $40 and $10 for add assert, respectively.) 
 
-At this phase, Light Hotspots will be onboarded using the [Helium Wallet CLI](https://github.com/helium/helium-wallet-rs), and **will not earn any HNT**. 
+At this phase, Light Hotspots will be onboarded using the [Helium Wallet CLI](https://github.com/helium/helium-wallet-rs), and **will not earn any HNT**. Note: Once upgraded, these Light Hotspots will only earn HNT for transferring packets. They will not be eligible for Proof of Coverage mining rewards.
 
 ### Milestone 2
 #### Paid Packet Forwarding
@@ -91,7 +91,7 @@ All Light Hotspots will be able to earn HNT for packet forwarding.
 * **Target Completion: Post Milestone 2**
 * **Status: NOT YET STARTED**
 
-At this point, Light Hotspots from [HIP19-approved manufacturers](/mine-hnt/hotspot-makers/approved-makers) will be able to earn HNT for POC. (Kerlink is the first approved maker to submit a [light hotspot design](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/kerlink.md).) And onboarding for these Light Hotspots will be done via the standard Helium Wallet app onboarding. 
+At this point, Light Hotspots from [HIP19-approved manufacturers](/mine-hnt/hotspot-makers/approved-makers) will be able to earn HNT for POC. (Kerlink is the first approved maker to submit a [light hotspot design](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/kerlink.md).) And onboarding for these Light Hotspots will be done via the standard Helium Wallet app onboarding. The fees will be equivalent to Full Hotspots ($40 and $10 for add assert, respectively). 
 
 This milesone is dependent on Validators being fully live on mainnet with the ability to generate challenges and process witness receipts 
 
@@ -102,5 +102,4 @@ This milesone is dependent on Validators being fully live on mainnet with the ab
 * **Status: NOT YET STARTED**
 
 In the final milestone, all existing Hotspots on the Network will be converted to run [gateway-rs](https://github.com/helium/gateway-rs) and will be dependent on Validators to generate challenges and process witness receipts.
-
 
