--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -19,6 +19,6 @@ Based on early tests, validator node requirements include:
 - If using AWS, a T2 large or xlarge EC2 instance or equivalent is recommended. If using another cloud provider, like GCP, Azure, or Digital Ocean, an instance with the same capabilities should be the target.
 - Static IP address with port `2154`(TCP) opened in your firewall with a route available to your validator host.
 - Running on stable network connections free of things like proxies, NAT, etc. The load is largely symmetrical when producing blocks, so good upstream connectivity recommended.
-- It is [discouraged to run Mainnet Validators at home](/mine-hnt/validators/validator-faqs-resources#why-do-you-discourage-running-validators-from-home).
+- It is [discouraged to run Mainnet Validators at home](/mine-hnt/validators/validator-faqs-resources#technical).
 
 Please review the [Expectations for Running a Validator on Testnet](/mine-hnt/validators) for additional expectations.
